...
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/ubi4GesturesSelectorV"
        app:layout_constraintEnd_toEndOf="@+id/ubi4GesturesSelectorV"
        app:layout_constraintStart_toStartOf="@+id/guidline_mid"
        app:layout_constraintTop_toTopOf="@+id/ubi4GesturesSelectorV" />
    <View
        android:id="@+id/collectionOfGesturesSelectBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/ubi4GesturesSelectorV"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ubi4GesturesSelectorV"
        app:layout_constraintTop_toTopOf="@+id/ubi4GesturesSelectorV"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />
    <View
        android:id="@+id/rotationGroupSelectBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/ubi4GesturesSelectorV"
...
            android:layout_width="match_parent"
            android:layout_height="54dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/activeGestureNameTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/sf_pro_display_light"
                android:maxLines="2"
                android:text="@string/active_gesture_is"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <View
                android:id="@+id/gestureCollection0Btn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/ubi4_view_with_corners_gray_outside"
...
                app:layout_constraintBottom_toBottomOf="@+id/gestureCollection10Btn"
                app:layout_constraintEnd_toEndOf="@+id/gestureCollection10Btn"
                app:layout_constraintStart_toStartOf="@+id/gestureCollection10Btn"
                app:layout_constraintTop_toTopOf="@+id/gestureCollection10Btn" />

            <View
                android:id="@+id/gestureCollection11Btn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ubi4_view_with_corners_gray_outside"
...
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/gestureCustom1Btn"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/ubi4_view_with_corners_gray_outside"
                android:elevation="3dp"
                app:layout_constraintEnd_toStartOf="@+id/guidline_mid_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customGesturesSectionTitleTv" />

            <View
                android:id="@+id/gesture1SettingsBtn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_setting"
                android:backgroundTint="@android:color/white"
                android:elevation="3dp"
...
                android:elevation="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidline_mid_3"
                app:layout_constraintTop_toBottomOf="@+id/gestureCustom12Btn" />

            <View
                android:id="@+id/gesture14SettingsBtn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_setting"
                android:backgroundTint="@android:color/white"
                android:elevation="3dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activeGestureNameCl">


        <com.woxthebox.draglistview.DragListView
            android:id="@+id/rotationGroupDragLv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ubi4_view_with_corners_gray_outside"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/ubi4_item_rotation_group"/>

        <View
            android:id="@+id/addGestureToRotationGroupBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ubi4_view_with_corners_gray_outside"
            android:elevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
...
            app:layout_constraintBottom_toBottomOf="@+id/addGestureToRotationGroupBtn"
            app:layout_constraintEnd_toEndOf="@+id/addGestureToRotationGroupBtn"
            app:layout_constraintStart_toStartOf="@+id/addGestureToRotationGroupBtn"
            app:layout_constraintTop_toTopOf="@+id/addGestureToRotationGroupBtn" />

        <TextView
            android:id="@+id/rotationGroupExplanationTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="@string/rotation_group_explanation"
            android:textColor="@color/ubi4_deactivate_text"
...
