...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ubi4DialogRotationGroupMessageTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_light"
                android:gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/the_that_rocks_gesture_will_remain_available_in_the_gesture_collection_but_will_be_removed_from_the_rotation_group"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
...
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_bold"
                android:text="@string/delete"
                android:textColor="@color/ubi4_no_system_red"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ubi4DialogRotationGroupConfirmBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <View
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_light"
                android:text="@string/cancel"
                android:textColor="@color/ubi4_yes_system_blue"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/ubi4DialogRotationGroupCancelBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5"
                tools:ignore="TextContrastCheck" />

            <View
...
